Fixed bug where the scoreboard background did not stretch to the entirety of the page

--- a/ScoreboardStyle.css
+++ b/ScoreboardStyle.css
@@ -39,6 +39,11 @@
     text-align: center;
 }
 
+.ScoreboardContent
+{
+    height: 100vh;
+}
+
 .TeamTitles
 {
     padding-top: 50px;
